--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
 
-jobs:
+i gues  :
   deploy:
     runs-on: ubuntu-latest
     permissions:
@@ -22,6 +22,12 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+          
+- name : Debug: Echo Project Value
+  run : echo "GOOGLE_PROJECT=${{ secrets.GOOGLE_PROJECT }}"
+
+   - name: Debug: Echo Project Value
+     run: echo "GOOGLE_PROJECT=${{ secrets.GOOGLE_PROJECT }}"
 
       - name: Deploy to Firebase Hosting
         run: |
