--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -15,18 +15,28 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
 
       - name: Authenticate with Workload Identity Federation
-        uses: google-github-actions/auth@v1
+        uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
 
-      - name: Debug: Echo Project Value
-        run: echo "GOOGLE_PROJECT=${{ secrets.GOOGLE_PROJECT }}"
+      - name: Setup Firebase CLI
+        run: npm install -g firebase-tools
 
       - name: Deploy to Firebase Hosting
-        run: |
-          npm install -g firebase-tools
-          firebase deploy --only hosting --project ${{ secrets.GOOGLE_PROJECT }}
+        run: firebase deploy --only hosting --project ${{ secrets.GOOGLE_PROJECT }}
